syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message CalculatorRequest {
    int32 numberOne = 1;
    int32 numberTwo = 2;
}

message CalculatorResponse {
    int32 result = 1;
}

service Calculator {
    rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};
}
